<resources>
    <string name="app_name">QOC Monitoring</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="home">Home/View Observation</string>
    <string name="add_form">Add New Observation</string>
    <string-array name="district_names">
        <item>Hobiganj</item>
    </string-array>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login1">LoginActivity1</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="ques1">১।  গর্ভবতী মহিলার ব্লাড প্রেসার/ রক্তচাপ পরিমাপ করেছে</string>
    <string name="ques2">২। হিমোগ্লোবিন টেস্ট করেছেন অথবা পরীক্ষা করার জন্য রেফার করেছেন</string>
    <string name="ques3">৩। ইউরিন প্রোটিন টেস্ট অথবা পরীক্ষা করার জন্য রেফার করেছেন</string>
    <string name="ques4">৪। গর্ভাবস্থায় পুস্টি সম্পর্কে আলোচনা করেছেন (পরিমানে বেশীও, মান সম্পন্ন খাবার খেতে বলেছেন)</string>
    <string name="ques5">৫। গর্ভকালীন বিপদচিনহ/ জটিলতা সম্পর্কে ক্লায়েন্ডকে বলেছেন</string>
    <string name="ques6">৬। কমপক্ষে ৪ টি অঘুঈ পরিদর্শনের গুরুত্ব আলোচুনা করেছেন </string>
    <string name="ques7">৭। একজন দক্ষ স্বাস্থ্য কর্মী দিয়ে ডেলিভারী করানোর জন্য ক্লায়েন্টকে পরামর্শ দিয়েছেন </string>
    <string name="ques8">৮। জন্মের এক ঘন্টার মধ্যে বুকের দুধ খাওয়ানোর বিষয়ে আলোচনা করেছেন</string>
    <string name="ques9">৯। ৬ মাস পর্যন্ত শুধু বুকের দুধ খাওয়ানোর বিষয়ে আলোচনা করেছেন। </string>
    <string name="ques10">১০। প্রসব পরবর্তী পরিবার পরিকল্পনা পদ্ধতি সম্পর্কে আলোচনা করেছেন  </string>
    <string name="ques11">১১। আয়রন ফলিক এসিড দিয়েছিন বা প্রেসক্রিপশন করেছেন</string>
    <string name="ques12">১২। আয়রন ফলিক এসিডের প্রয়োজনীয়তা ব্যাক্ষ্যা করেছেন </string>
    <string name="ques13">গর্ভবতী মহিলার ব্ল্যাড প্রেসার/ রক্তচাপ পরিমাপ করেছে </string>
    <string name="form">Form</string>
    <string name="title_activity_test">Observation of ANC</string>
    <string name="title_activity_supervisor_verification">Supervisor_verificationActivity</string>
    <string name="title_activity_display_all_">DisplayAll_Activity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_display_user">DisplayUserActivity</string>
    <string name="title_activity_address_insert">AddressInsertActivity</string>
    <string name="title">Empty Field</string>
    <string name="msg">Please Enter User ID</string>
    <string name="title_activity_selection_activity_user">SelectionActivityUser</string>
    <string name="title_activity_selection_user">SelectionUserActivity</string>
    <string name="title_activity_user_activity_service_provider">UserActivityServiceProvider
    </string>
    <string name="title_activity_test1">Observation of Sick Child</string>
    <string name="title_activity_display_user_form">DisplayUserFormActivity</string>
    <string name="title_invetory_section_1">hš¿cvwZ cybivq e¨env‡ii Rb¨ †hLv‡b Rxevbygy³ Kiv nq †mB ¯’vbwU †`wL‡q w`‡Z ejyb| ¯^v¯’¨‡K‡›`ªi hš¿cvwZ Rxevbygy³ Kiv m¤ú‡K© whwb me‡P‡q fvj Rv‡bb Zv‡K
    Luy‡R †ei Kiæb| wb‡Ri cwiPq w`b, mv‡f©i D‡Ïk¨ e¨vL¨v Kiæb Ges B›UviwfD Pvwj‡q hvb|</string>
    <string name="info_provider_name_lbl_101">১০১)  DËi`vZvi bvgt</string>
    <string name="info_provider_name_lbl_201">২০১)  DËi`vZvi bvgt</string>
    <string name="info_provider_name_lbl_301">৩০১)  DËi`vZvi bvgt</string>
    <string name="info_provider_post_lbl">c`ext </string>
    <string name="inventory_title_102">১০২) wRÁvmv Kiæb †h, bx‡Pi D‡jøwLZ cÖwZwU DcKiY GB ¯^v¯’¨‡K‡›`ªAv‡Q wK bv Ges e¨eüZ nq wK bv?
    hw` _v‡K Zvn‡j Zv ‡`L‡Z Pvb; mPj Av‡Q wKbv Ges e¨envi Kiv nq wK bv Zv wRÁvmv Kiæb|</string>
    <string name="equipment_102_title1">(A) Av‡Q? Avcwb bv †`L‡j ʺbvÓ
e„ËvwqZ Kiæb|</string>
    <string name="equipment_102_title2">(B) mPj?</string>
    <string name="equipment_102_title3">(C) e¨eüZ nq?</string>
    <string name="tv_inventory_102_title_sub">DcKiY</string>
    <string name="title_invetory_section_2">¯^v¯’¨‡K‡›`ªi eR©¨ e¨e¯’vcbvi Rb¨ `vwqZ¡cÖvß e¨w³‡K Luy‡R †ei Kiæb| wb‡Ri cwiPq w`b, mv‡f©i D‡Ïk¨ e¨vL¨v Kiæb Ges B›UviwfD Pvwj‡q hvb|</string>
    <string name="title_invetory_section_3">wb‡`©kbvt District Hospital I Upazila Health Complex Gi †ÿ‡Î †h K‡ÿ Mf©Kvjxb †mev †`qv nq Ges UHFWC Gi †ÿ‡Î FWV Gi Kÿ cwi`k©b Kiæb| wb‡R ch©‡eÿY
Kiæb, cÖ‡qvRb n‡j mswkøó †mevcÖ`vbKvix‡K cÖkœ K‡i †R‡b wbb|</string>
    <string name="ache">অাছে</string>
    <string name="nai">নাই</string>
    <string name="query_101">Mf©eZx gv‡qi A‡cÿvi Rb¨ Avjv`v Kÿ/wbw`©ó RvqMv hv †iv`-e„wó †_‡K gy³</string>
    <string name="no">না</string>
    <string name="yes">হ্যাঁ</string>
    <string name="donot_know">জানি না</string>
    <string name="yes_q">K‡ib?</string>
    <string name="fp_ques_101">101) ch©‡eÿY wmwiqvj b¤^i:</string>
    <string name="fp_ques_102">102) ch©‡eÿ‡Yi ZvwiL:</string>
    <string name="fp_ques_103">103) ch©‡eÿY ïiæi mgq:</string>
    <string name="fp_ques_104">104) K¬v‡q›U †h †mev wb‡Z G‡m‡Qb Zvi weeiY:</string>
    <string name="fp_ques_105">105) †mevcÖ`vbKvix wb‡Pi c`‡¶c MÖnY K‡iwQ‡jb wKbv Zv †iKW© Kiæb|</string>
    <string name="fp_ques_01">01) ‡mev cÖ`vb hv‡Z †`Lv bv hvq Zv wbwðZ K‡i‡Qb</string>
    <string name="fp_ques_02">02) ‡mev cÖ`v‡bi ‡Kvb wKQy hv‡Z evB‡i †kvbv bv hvq Zv wbwðZ K‡i‡Qb</string>
    <string name="fp_ques_03">03) ‡mev MÖnxZvi †Kvb Amyweav Av‡Q wK bv Zv Av‡jvPbv K‡i‡Qb</string>
    <string name="fp_ques_04">04) c×wZi cvk¦©cÖwZwµqv m¤ú‡K© Av‡jvPbv K‡i‡Qb</string>
    <string name="fp_ques_05">05) c×wZi cvk¦©cÖwZwµqv †`Lv w`‡j wK Ki‡eb Zv Av‡jvPbv K‡i‡Qb</string>
    <string name="fp_ques_06">06) ‡mev MÖnxZvi †Kvb cÖkœ Av‡Q wK bv, Zv wRÁvmv K‡i‡Qb Ges cÖkœ wRÁvmv Ki‡Z DrmvwnZ K‡i‡Qb</string>
    <string name="fp_ques_07">07) ‡mevcÖ`v‡bi mgq h_vh_ Kg© mnvwqKv (Re GBW) e¨envi K‡i‡Qb</string>
    <string name="fp_ques_08">08) cieZ©x wfwRU (d‡jvAvc wfwRU) Gi ZvwiL MÖnxZv‡K Rvwb‡q w`‡q‡Qb</string>
    <string name="fp_ques_09">109) ch©‡eÿY ‡kl Kivi mgq:</string>
    <string name="fp_description">ক্লায়েন্ট যে সেবা নিতে এসেছে তার বিবরণ</string>
    <string-array name="fp_service_description">
        <item>Select</item>
        <item>পরিবার পরিকল্পনা পদ্বতি সেবা</item>
        <item>পরিবার পরিকল্পনা পদ্বতি জনিত পার্শ্বপ্রতিক্রিয়া ব্যবস্থাপনা</item>
        <item>অন্যান্য</item>
    </string-array>
    <string name="next">Next</string>
    <string name="prev">previous</string>
    <string name="inventory_ques_header">hš¿cvwZ cybivq e¨env‡ii Rb¨ †hLv‡b Rxevbygy³ Kiv nq †mB ¯’vbwU †`wL‡q w`‡Z ejyb| ¯^v¯’¨‡K‡›`ªi hš¿cvwZ Rxevbygy³ Kiv m¤ú‡K© whwb me‡P‡q fvj Rv‡bb Zv‡K Luy‡R †ei Kiæb| wb‡Ri cwiPq w`b, mv‡f©i D‡Ïk¨ e¨vL¨v Kiæb Ges B›UviwfD Pvwj‡q hvb|</string>
    <string name="inventory_client_name">DËi`vZvi bvgt</string>
    <string name="inventory_designation">c`ex</string>
    <string name="inventory_instrument">DcKiY</string>
    <string name="inventory_has">Av‡Q?</string>
    <string name="inventory_active">mPj?</string>
    <string name="inventory_use">e¨eüZ nq?</string>
    <string name="inventory_ques_01">01 B‡jKwUªK A‡Uv‡K¬f</string>
    <string name="inventory_ques_02">02 bb-B‡jKwUªK A‡Uv‡K¬f</string>
    <string name="inventory_ques_03">03 B‡jKwUªK WªvB wnU †ówijvBRvi</string>
    <string name="inventory_ques_04">04 B‡jKwUªK eqjvi ev wógvi</string>
    <string name="inventory_ques_05">05 e‡qwjs/wóg-Gi Rb¨ bb-B‡jKwUªK cU DB_ Kfvi</string>
    <string name="inventory_ques_06">06 †óvf ev KzKvi (bb-B‡jKwUªK hš¿cvwZi Rb¨)</string>
    <string name="inventory_dust_title">¯^v¯’¨‡K‡›`ªi eR©¨ e¨e¯’vcbvi Rb¨ `vwqZ¡cÖvß e¨w³‡K Luy‡R †ei Kiæb| wb‡Ri cwiPq w`b, mv‡f©i D‡Ïk¨ e¨vL¨v Kiæb Ges B›UviwfD Pvwj‡q hvb|</string>
    <string name="inventory_dust_replier_name">DË i`vZvi bvgt</string>
    <string name="inventory_dust_replier_post">c`ext</string>
    <string name="inventory_dust_ques_202">202 GB ¯^v¯’¨‡K‡›`ªi eR©¨ (PzovšÍ) AcmvY ¯^v¯’¨‡K‡›`ªi wfZ‡i Kiv nq, bv-wK ¯^v¯’¨‡K‡›`ªi evB‡i †Kv_vI Kiv nq?</string>
    <string name="inventory_dust_ques_203">203 ¯^v¯’¨‡K‡›`ªi aviv‡jv eR©¨ (kvc© I‡qó), †hgbt (myP, †eøW, fv½v ¯øvBW/KvP/‡U÷wUDe,
e¨eüZ G¤úyj, wcb/‡evW© wcb, w÷‡ji Zvi BZ¨vw`) wKfv‡e wWR‡cvR Kiv nq?\n
wb‡`©kbvt mwVK DË‡ii Rb¨ ʺ‡cÖveÓ Kiæb|</string>
    <string name="inventory_dust_ques_204">204 avivj eR©¨ eR©¨ (PzovšÍ) Acmvi‡Yi Av‡M †Kv_vq msiÿY Kiv nq †mB RvqMv †`L‡Z
Pvb| hw` eR©¨ ¯^v¯’¨‡K‡›`ªi evB‡i mwi‡q †djv nq, Z‡e evB‡i †bqvi Av‡M †Kv_vq GB
eR©¨ Rgv Kiv nq Zv †`L‡Z Pvb|
ch©‡eÿY Kiæbt avivj eR©¨ †j‡ewjs Kiv ʺjvjÓ is Gi cv‡Î c„_Kfv‡e msiÿY Kiv nq
wK bv|</string>
    <string name="inventory_dust_ques_205">205 Zij eR©¨, †hgbt i³, gj, g~Î, ‡Wwjfvixi ci †h mg¯Í Zij c`v_© †ei nq,
Mf©dzj/Mf©msµvšÍ eR©¨, I Ab¨vb¨ ˆRe im BZ¨vw` wKfv‡e wWR‡cvR Kiv nq?\n
wb‡`©kbvt mwVK DË‡ii Rb¨ ʺ‡cÖveÓ Kiæb|</string>
    <string name="inventory_dust_ques_206">206 Zij eR©¨ (PzovšÍ) Acmvi‡Yi Av‡M †Kv_vq msiÿY Kiv nq †mB RvqMv †`L‡Z Pvb| hw`
eR©¨ ¯^v¯’¨‡K‡›`ªi evB‡i mwi‡q †djv nq Z‡e evB‡i †bqvi Av‡M †Kv_vq GB eR©¨ Rgv
Kiv nq Zv †`L‡Z Pvb|
ch©‡eÿY Kiæbt Zij eR©¨ †j‡ewjs Kiv ʺnjy`Ó is Gi cv‡Î c„_Kfv‡e msiÿY Kiv nq
wK bv|</string>
    <string name="inventory_dust_ques_207">207 cybt Pµvqb‡hvM¨ eR©¨ (cøvw÷K I avZe ‡KŠUv, ev·/KvU©yb, cwjw_b e¨vM, Bb‡RKk‡bi
Lvwj fv‡qj, wgbv‡ij cvwbi †evZj, cøvw÷K †cøU I Møvm BZ¨vw`) (PzovšÍ) Acmvi‡Yi
Av‡M †Kv_vq msiÿY Kiv nq †mB RvqMv †`L‡Z Pvb| hw` eR©¨ ¯^v¯’¨‡K‡›`ªi evB‡i
mwi‡q †djv nq Z‡e evB‡i †bqvi Av‡M †Kv_vq GB eR©¨ Rgv Kiv nq Zv †`L‡Z Pvb|
ch©‡eÿY Kiæbt cybt Pµvqb‡hvM¨ eR©¨ †j‡ewjs Kiv ʺmeyRÓ is Gi cv‡Î c„_Kfv‡e
msiÿY Kiv nq wK bv|</string>
    <string name="inventory_dust_ques_208">208 mvaviY eR©¨ (Kjv/ev`v‡gi †Lvmv, KvMR/‡gvoK, ivbœv N‡ii eR©¨, Lvev‡ii Dw”Qó Ask,
AmsµwgZ bó Kvco, MR, Zzjv, Jl‡ai wóªc BZ¨vw`) †Kv_vq msiÿY Kiv nq †mB
RvqMv †`L‡Z Pvb| hw` eR©¨ ¯^v¯’¨‡K‡›`ªi evB‡i mwi‡q †djv nq Z‡e evB‡i †bqvi Av‡M
†Kv_vq GB eR©¨ Rgv Kiv nq Zv †`L‡Z Pvb|
ch©‡eÿY Kiæbt mvaviY eR©¨ †j‡ewjs Kiv ʺKvjÓ is Gi cv‡Î c„_Kfv‡e msiÿY Kiv
nq wK bv|</string>
    <string name="inventory_dust_ques_209">209 cÖkœ bs 203 Ges 205 †`Lybt Bbwmbv‡iUi e¨envi Kiv nq (†KvW 1 e„ËvwqZ)</string>
    <string name="inventory_dust_ques_210">210 Bbwmbv‡iUiwU †`L‡Z Pvb|</string>
    <string name="inventory_dust_ques_211">211 cÖkœ bs 203 Ges 205 †`Lybt XvKbvhy³ Wvw¤ús wcU ev wcU cvqLvbv e¨envi Kiv nq (†KvW 4 e„ËvwqZ) </string>
    <string name="inventory_dust_ques_212">212 Wvw¤ús wcU ev wcU cvqLvbv †`L‡Z Pvb|</string>
    <string name="inventory_dust_ques_202_ans_1">GB ¯^v¯’¨‡K‡›`ªi wfZ‡i</string>
    <string name="inventory_dust_ques_202_ans_2"> ¯^v¯’¨‡K‡›`ªi wfZ‡i I evB‡i DfqB</string>
    <string name="inventory_dust_ques_202_ans_3">¯^v¯’¨‡K‡›`ªi evB‡i</string>
    <string name="inventory_dust_ques_203_ans_1">Bbwmbv‡iU‡i cywo‡q †djv nq</string>
    <string name="inventory_dust_ques_203_ans_2">msiwÿZ gvV ev M‡Z© cywo‡q †djv nq gv‡V</string>
    <string name="inventory_dust_ques_203_ans_3">‡h †Kvb (Awba©vwiZ) †Lvjv gvV ev M‡Z© cywo‡q †djv nq</string>
    <string name="inventory_dust_ques_203_ans_4">XvKbvhy³ Wvw¤ús wcU ev wcU cvqLvbvq †djv nq</string>
    <string name="inventory_dust_ques_203_ans_5">msiwÿZ (wba©vwiZ) gvV ev M‡Z© †djv nq</string>
    <string name="inventory_dust_ques_203_ans_6">‡h †Kvb (Awba©vwiZ) AmsiwÿZ †Lvjv gvV ev M‡Z© †djv nq</string>
</resources>