<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    android:weightSum="5">

    <TextView
        android:id="@+id/tv_inventory_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_weight="2"
        android:text="csixchichikchchf" />

    <HorizontalScrollView
        android:id="@+id/sv_inventory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <LinearLayout
            android:id="@+id/ll_radio_groups"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/yes_no_radiogroup_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/yes_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/no_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/no" />

                <RadioButton
                    android:id="@+id/rb_donot_know_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/donot_know" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/yes_no_radiogroup_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/yes_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/no_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/no" />

                <RadioButton
                    android:id="@+id/rb_donot_know_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/donot_know" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/yes_no_radiogroup_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/yes_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/no_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/no" />

                <RadioButton
                    android:id="@+id/rb_donot_know_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/donot_know" />

            </RadioGroup>

        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>
